tests/ivg/invalid/missing_font_name.ivg
format IVG-3
BOUNDS 0,0,10,10
font missing
text "hi"
